<resources>
    <string name="app_name">FreeToPlayWishlist</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login_title">Login</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_create_account">Aun no estoy registrado</string>
    <string name="login_continue_button">Continuar</string>
    <string name="login_invalid_data">Por favor, rellena todos los datos.</string>
    <string name="login_invalid_credentials">Credenciales incorrectos.</string>

    <string name="sign_up_title">Crear cuenta</string>
    <string name="sign_up_email_hint">Email</string>
    <string name="sign_up_name_hint">Nombre</string>
    <string name="sign_up_password_hint">Contraseña</string>
    <string name="sign_up_age_hint">Edad</string>
    <string name="sign_up_button">Continuar</string>
    <string name="sign_up_error_dialog_button">Okay</string>
    <string name="sign_up_error_firebase_message">Por favor, rellena todos los datos.</string>
    <string name="sign_up_success_firebase_message">¡Ya estás registrado!</string>

    <string name="home_categories_title">Categorías</string>
    <string name="home_category_mmorpg">mmorpg</string>
    <string name="home_category_shooter">shooter</string>
    <string name="home_category_strategy">strategy</string>
    <string name="home_category_moba">moba</string>
    <string name="home_category_racing">racing</string>
    <string name="home_category_sports">sports</string>
    <string name="home_category_social">social</string>
    <string name="home_category_sandbox">sandbox</string>
    <string name="detail_request_error_message">Los datos no pudieron ser guardados, error con código: %s</string>

</resources>