<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/pb_home"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            tools:visibility="gone" />

        <TextView
            android:id="@+id/tv_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_margin="16dp"
            android:text="@string/home_categories_title"
            android:textAppearance="@style/viewTitle" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cg_categories"
            style="@style/Widget.MaterialComponents.Chip.Action"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_sandbox"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_category_sandbox"
                app:chipStartPadding="8dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_social"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_category_social" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_sports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:text="@string/home_category_sports" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_racing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:text="@string/home_category_racing" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_moba"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/home_category_moba" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_strategy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:text="@string/home_category_strategy" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_shooter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:text="@string/home_category_shooter" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_mmorpg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:text="@string/home_category_mmorpg" />
        </com.google.android.material.chip.ChipGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="8dp">

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_games"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>